# jipher

./: .gitignore  Cargo.toml  index.js  output.json.zstd  package-lock.json  package.json
eliminator/: Cargo.toml  LICENSE  README.md
eliminator/src/: main.rs  words.rs
src/: histogram.rs  interface.rs  main.rs  solutions.rs  words.rs
