[package]
name = "eliminator"
version = "0.1.0"
description = "An example generated using the hello-world template"
authors = ["Jason 'Toolbox' Oettinger <jason@oettinger.email>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
serde_json = "1.0"
serde = "1.0"